[workspace]
members = [
    "account-decoder",
    "bloom",
    "bucket_map",
    "clap-utils",
    "cli-config",
    "entry",
    "evm-utils/programs/evm_loader",
    "evm-utils/evm-state",
    "evm-utils/evm-rpc",
    "frozen-abi",
    "genesis",
    "ledger",
    "keygen",
    "logger",
    "measure",
    "merkle-tree",
    "metrics",
    "perf",
    "programs/config",
    "programs/stake",
    "programs/vote",
    "programs/config",
    "programs/stake",
    "program-runtime",
    "rayon-threadlimit",
    "remote-wallet",
    "runtime",
    "sdk",
    "storage-proto",
    "version",
    "transaction-status",
    
    
]

exclude = [
    "programs/bpf",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
primitive-types = { git = "https://github.com/lqj9908/parity-common-primitive-types-v0.11-with-borsh-support-nostd" }
rlp = { git = "https://github.com/lqj9908/parity-common-primitive-types-v0.11-with-borsh-support-nostd" }
uint = { git = "https://github.com/lqj9908/parity-common-primitive-types-v0.11-with-borsh-support-nostd"  }
spl-memo = { path = "spl-memo" }
# TODO: remove once jsonrpc-core-client 18.0.1 is released
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc", rev = "e724d087defc0af35bc1c844049d1611588d8466", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/paritytech/jsonrpc", rev = "e724d087defc0af35bc1c844049d1611588d8466", version = "18.0.0" }
