[workspace]
members = [
    "account-decoder",
    "bloom",
    "bucket_map",
    "clap-utils",
    "cli-config",
    "entry",
    "evm-utils/programs/evm_loader",
    "evm-utils/evm-state",
    "evm-utils/evm-rpc",
    "evm-utils/evm-bridge",
    "faucet",
    "frozen-abi",
    "genesis",
    "ledger",
    "keygen",
    "logger",
    "measure",
    "merkle-tree",
    "metrics",
    "perf",
    "programs/config",
    "programs/stake",
    "programs/vote",
    "programs/config",
    "programs/stake",
    "program-runtime",
    "rayon-threadlimit",
    "remote-wallet",
    "rpc",
    "runtime",
    "sdk",
    "storage-proto",
    "version",
    "transaction-status",
    "client",
    "txpool",
    "streamer"
    
    
]

exclude = [
    "programs/bpf",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
primitive-types = { git = "https://github.com/mikewang68/parity-common" }
rlp = { git = "https://github.com/mikewang68/parity-common" }
uint = { git = "https://github.com/mikewang68/parity-common"  }
spl-memo = { path = "spl-memo" }
# TODO: remove once jsonrpc-core-client 18.0.1 is released
jsonrpc-core = { git = "https://github.com/mikewang68/jsonrpc", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/mikewang68/jsonrpc", version = "18.0.0" }
