[workspace]
members = [
    "account-decoder",
    "bloom",
    "bucket_map",
    "core",
    "clap-utils",
    "cli",
    "cli-config",
    "cli-output",
    "download-utils",
    "entry",
    "evm-utils/programs/evm_loader",
    "evm-utils/evm-state",
    "evm-utils/evm-rpc",
    "evm-utils/evm-bridge",
    "faucet",
    "frozen-abi",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "ledger",
    "keygen",
    "logger",
    "measure",
    "merkle-tree",
    "metrics",
    "perf",
    "poh",
    "program-test",
    "programs/address-lookup-table",
    "programs/bpf_loader",
    #"programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/stake",
    "programs/vote",
    "programs/config",
    "programs/stake",
    "program-runtime",
    "rayon-threadlimit",
    "rbpf-0.2.24",
    "remote-wallet",
    "rpc",
    "runtime",
    "sdk",
    "send-transaction-service",
    "spl-token-3.2.0",
    "storage-proto",
    "storage-bigtable",
    "sys-tuner",
    "version",
    "test-validator",
    "transaction-status",
    "client",
    "txpool",
    "streamer",
    "gossip",
    "net-utils",
    "replica-lib",
    "validator",
    
    
]

exclude = [
    "programs/bpf",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
primitive-types = { git = "https://github.com/mikewang68/parity-common" }
rlp = { git = "https://github.com/mikewang68/parity-common" }
uint = { git = "https://github.com/mikewang68/parity-common"  }
spl-memo = { path = "spl-memo" }
# TODO: remove once jsonrpc-core-client 18.0.1 is released
jsonrpc-core = { git = "https://github.com/mikewang68/jsonrpc", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/mikewang68/jsonrpc", version = "18.0.0" }
