[package]
name = "bucket-map"
version = "1.9.29"
description = "bucket-map"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-bucket-map"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
rayon = "1.5.0"
logger = { path = "../logger", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
memmap2 = "0.5.0"
log = { version = "0.4.11" }
measure = { path = "../measure", version = "=1.9.29" }
rand = "0.7.0"
fs_extra = "1.2.0"
tempfile = "3.2.0"

[lib]
crate-type = ["lib"]
name = "bucket_map"

#[[bench]]
#name = "bucket_map"
