[package]
name = "core"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
homepage = ""
documentation = ""
readme = "../README.md"
repository = ""
authors = [""]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "solana-labs/solana", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.6"
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.8.1", features = ["tls"]}
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.1"
log = "0.4.14"
lru = "=0.7.1"
rand = "0.7.0"
rand_chacha = "0.2.2"
raptorq = "=1.6.4"
rayon = "1.5.1"
retain_mut = "=0.1.9"
serde = "1.0.130"
serde_derive = "1.0.103"
bloom = { path = "../bloom", version = "=1.9.29" }
client = { path = "../client", version = "=1.9.29" }
entry = { path = "../entry", version = "=1.9.29" }
geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "=1.9.29" }
gossip = { path = "../gossip", version = "=1.9.29" }
ledger = { path = "../ledger", version = "=1.9.29" }
logger = { path = "../logger", version = "=1.9.29" }
measure = { path = "../measure", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
net-utils = { path = "../net-utils", version = "=1.9.29" }
perf = { path = "../perf", version = "=1.9.29" }
poh = { path = "../poh", version = "=1.9.29" }
program-runtime = { path = "../program-runtime", version = "=1.9.29" }
rpc = { path = "../rpc", version = "=1.9.29" }
replica-lib = { path = "../replica-lib", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
frozen-abi = { path = "../frozen-abi", version = "=1.9.29" }
frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.9.29" }
sino-send-transaction-service = { path = "../send-transaction-service", version = "=1.9.29" }
streamer = { path = "../streamer", version = "=1.9.29" }
transaction-status = { path = "../transaction-status", version = "=1.9.29" }
version = { path = "../version", version = "=0.6.3" }
vote-program = { path = "../programs/vote", version = "=1.9.29" }
tempfile = "3.2.0"
thiserror = "1.0"
rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
sys-info = "0.9.1"
tokio = { version = "~1.14.1", features = ["full"] }

hex = "0.4.2"
rlp = "0.5"
sha3 = "0.9.1"
primitive-types = "0.11.0"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
account-program = { path = "../programs/account-program" }
relying-party-program = { path = "../programs/relying-party-program" }

trees = "0.4.2"
snafu = "0.7"
anyhow = "1"

[dev-dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
matches = "0.1.9"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.72"
serial_test = "0.5.1"
program-runtime = { path = "../program-runtime", version = "=1.9.29" }
stake-program = { path = "../programs/stake", version = "=1.9.29" }
version = { path = "../version", version = "=0.6.3" }
static_assertions = "1.1.0"
systemstat = "0.1.10"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
multiple-db-in-thread = []