[package]
name = "genesis"
version = "1.9.29"
description = "genesis"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.130"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
clap-utils = { path = "../clap-utils", version = "=1.9.29" }
cli-config = { path = "../cli-config", version = "=1.9.29" }
entry = { path = "../entry", version = "=1.9.29" }
ledger = { path = "../ledger", version = "=1.9.29" }
logger = { path = "../logger", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
stake-program = { path = "../programs/stake", version = "=1.9.29" }
version = { path = "../version", version = "=0.6.3" }
vote-program = { path = "../programs/vote", version = "=1.9.29" }

evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }

tempfile = "3.2.0"
once_cell = "1.7.2"
log = "0.4"

[[bin]]
name = "sino-genesis"
path = "src/main.rs"

[lib]
name = "genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["with_evm"]
with_evm = []