[package]
authors = [""]
edition = "2021"
name = "geyser-plugin-manager"
description = "Geyser plugin manager."
version = "1.9.29"
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = "https://docs.rs/solana-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.2"
log = "0.4.11"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.9.29" }
logger = { path = "../logger", version = "=1.9.29" }
measure = { path = "../measure", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
rpc = { path = "../rpc", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
transaction-status = { path = "../transaction-status", version = "=1.9.29" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
