[package]
name = "measure"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
homepage = ""
documentation = ""
readme = "../README.md"
repository = ""
authors = [""]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.14"
sdk = { path = "../sdk", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
