[package]
name = "net-utils"
version = "1.9.29"
description = "Network Utilities"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
nix = "0.23.0"
rand = "0.7.0"
serde = "1.0.130"
serde_derive = "1.0.103"
socket2 = "0.4.2"
logger = { path = "../logger", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
version = { path = "../version", version = "=0.6.3" }
tokio = { version = "1.14.1", features = ["full"] }
url = "2.2.2"

[lib]
name = "sino_net_utils"

[[bin]]
name = "ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "ip-address-server"
path = "src/bin/ip_address_server.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]