[package]
name = "poh"
version = "1.9.29"
description = "PoH"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.5"
log = "0.4.14"
entry = { path = "../entry", version = "=1.9.29" }
ledger = { path = "../ledger", version = "=1.9.29" }
measure = { path = "../measure", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
sys-tuner = { path = "../sys-tuner", version = "=1.9.29" }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.3"
matches = "0.1.9"
rand = "0.7.0"
logger = { path = "../logger", version = "=1.9.29" }
perf = { path = "../perf", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "poh"

[[bench]]
name = "poh"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
