[package]
name = "rbpf"
version = "0.2.24"
description = "Virtual machine and JIT compiler for eBPF programs"
authors = [""]
repository = ""
homepage = ""
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0"
edition = "2018"



[dependencies]
byteorder = "1.2"
combine = "3.8.1"
goblin = "0.4.2"
hash32 = "0.1.0"
libc = "0.2"
log = "0.4.2"
rand = { version = "0.7.3", features = ["small_rng"]}
scroll = "0.10.1"
thiserror = "1.0.26"
time = "0.1"
rustc-demangle = "0.1"

[dev-dependencies]
elf = "0.0.10"
json = "0.11"
#test_utils = { path = "test_utils/" }
