[package]
authors = [""]
edition = "2021"
name = "remote-wallet"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""

[dependencies]
base32 = "0.4.0"
console = "0.15.0"
dialoguer = "0.9.0"
hidapi = { version = "1.3.0", default-features = false }
log = "0.4.14"
num-derive = { version = "0.3" }
num-traits = { version = "0.2" }
parking_lot = "0.11"
qstring = "0.7.2"
semver = "1.0"
sdk = { path = "../sdk", version = "=1.9.29" }
thiserror = "1.0"
uriparse = "0.6.3"

[features]
default = ["linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]

[[bin]]
name = "ledger-udev"
path = "src/bin/ledger-udev.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
