[package]
name = "rpc"
version = "1.9.29"
description = "RPC"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-rpc"
edition = "2021"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
crossbeam-channel = "0.5"
dashmap = "4.0.2"
itertools = "0.10.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
libc = "0.2.108"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
soketto = "0.7"
account-decoder = { path = "../account-decoder", version = "=1.9.29" }
account-program = { path = "../programs/account-program" }
client = { path = "../client", version = "=1.9.29" }
entry = { path = "../entry", version = "=1.9.29" }
faucet = { path = "../faucet", version = "=1.9.29" }
gossip = { path = "../gossip", version = "=1.9.29" }
ledger = { path = "../ledger", version = "=1.9.29" }
measure = { path = "../measure", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
perf = { path = "../perf", version = "=1.9.29" }
poh = { path = "../poh", version = "=1.9.29" }
rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
transaction-status = { path = "../transaction-status", version = "=1.9.29" }
version = { path = "../version", version = "=0.6.3" }
vote-program = { path = "../programs/vote", version = "=1.9.29" }
sino-send-transaction-service = { path = "../send-transaction-service", version = "=1.9.29" }
relying-party-program = { path = "../programs/relying-party-program" }
spl-token = { path = "../spl-token-3.2.0", version = "=3.2.0", features = ["no-entrypoint"] }
stream-cancel = "0.8.1"
streamer = { path = "../streamer", version = "=1.9.29" }
storage-bigtable = { path = "../storage-bigtable", version = "=1.9.29" }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
evm-rpc = { path = "../evm-utils/evm-rpc" }
evm-state = { path = "../evm-utils/evm-state" }
evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
snafu = "0.7"
sha3 = "0.10"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }
tracing-attributes = "0.1.18"
tracing-opentelemetry  =  "0.16"
opentelemetry = { version = "0.16", default-features = false, features = ["trace"] }
opentelemetry-jaeger = { version = "0.15", features = [ "reqwest_collector_client", "rt-tokio" ] }



[dev-dependencies]
serial_test = "0.5.1"
stake-program = { path = "../programs/stake", version = "=1.9.29" }
symlink = "0.1.0"

[lib]
crate-type = ["lib"]
name = "rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]