[package]
name = "sino-send-transaction-service"
version = "1.9.29"
description = "send transaction service"
authors = [""]
repository = ""
homepage = ""
documentation = ""
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.14"
logger = { path = "../logger", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]