[package]
name = "storage-bigtable"
version = "1.9.29"
description = "Storage BigTable"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
bincode = "1.3.3"
bzip2 = "0.4.3"
enum-iterator = "0.7.0"
flate2 = "1.0.22"
goauth = "0.10.0"
log = "0.4.14"
prost = "0.11.0"
prost-types = "0.11.1"
serde = "1.0.130"
serde_derive = "1.0.103"
smpl_jwt = "0.6.1"
metrics = { path = "../metrics", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
storage-proto = { path = "../storage-proto", version = "=1.9.29" }
transaction-status = { path = "../transaction-status", version = "=1.9.29" }
thiserror = "1.0"
tonic = { version = "0.8.1", features = ["tls", "transport", "gzip"] }
zstd = "0.9.0"

evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
# openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
# declare it here as well to activate the "vendored" feature that builds OpenSSL
# statically...
[target."cfg(not(windows))".dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# ...except on Windows to avoid having to deal with getting CI past a build-time
# Perl dependency
[target."cfg(windows)".dependencies]
openssl = { version = "0.10", features = [] }

[lib]
crate-type = ["lib"]
name = "storage_bigtable"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
