[package]
name = "test-validator"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
homepage = ""
documentation = ""
readme = "../README.md"
repository = ""
authors = [""]
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.12.3"
log = "0.4.14"
serde_derive = "1.0.103"
serde_json = "1.0.72"
cli-output = { path = "../cli-output", version = "=1.9.29" }
client = { path = "../client", version = "=1.9.29" }
core = { path = "../core", version = "=1.9.29" }
gossip = { path = "../gossip", version = "=1.9.29" }
ledger = { path = "../ledger", version = "=1.9.29" }
logger = { path = "../logger", version = "=1.9.29" }
net-utils = { path = "../net-utils", version = "=1.9.29" }
# program-test = { path = "../program-test", version = "=1.9.29" }
rpc = { path = "../rpc", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
streamer = { path = "../streamer", version = "=1.9.29" }
evm-state = { path = "../evm-utils/evm-state" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
