[package]
name = "transaction-status"
version = "1.9.29"
description = "Solana transaction status types"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-transaction-status"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
Inflector = "0.11.4"
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
account-decoder = { path = "../account-decoder", version = "=1.9.29" }
measure = { path = "../measure", version = "=1.9.29" }
metrics = { path = "../metrics", version = "=1.9.29" }
runtime = { path = "../runtime", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
vote-program = { path = "../programs/vote", version = "=1.9.29" }
spl-associated-token-account = { path = "../associated-token-account/program", version = "=1.0.3", features = ["no-entrypoint"] }
spl-memo = { path = "../spl-memo", version = "=3.0.1", features = ["no-entrypoint"] }
#spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
spl-token = { path = "../spl-token-3.2.0", version = "=3.2.0", features = ["no-entrypoint"] }
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]