[package]
name = "triedb"
version = "0.5.0"
edition = "2018"
license = "Apache-2.0"
description = "Lightweight Ethereum world state storage."
repository = "https://github.com/hrls/triedb"

[lib]
name = "triedb"


[dependencies]
sha3 = "0.9.1"
rlp = "0.5.0"
primitive-types = { version = "0.11.0", features = ["rlp", "serde"] }
thiserror = "1.0.23"
rocksdb_lib = { package = "rocksdb", version = "0.20.1", default-features = false, optional = true }

# rocksdb_lib = { package = "rocksdb", version = "0.16.0", default-features = false, optional = true }
dashmap = "4.0"
log="0.4"
derivative="2.2"
anyhow = "1.0"
rayon = "*"
tracing-attributes = {version = "0.1.11", optional = true}
tracing = {version = "0.1.35", optional = true}
termtree = "0.4.0"
etcommon-hexutil = "0.2.4"
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"]}
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.89"
tempfile = "3.2.0"
hex-literal="0.3"
env_logger = "0.9"
tracing-subscriber = {version="0.3", features=["json"]}


[features]
default = ["rocksdb"]
rocksdb = ["rocksdb_lib"]
tracing-enable = ["tracing-attributes", "tracing"]

[[bench]]
name = "compare_backends"
harness = false

[[bench]]
name = "bench_diff"
harness = false
