[package]
name = "spl-associated-token-account"
version = "1.0.3"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
#solana-program = "1.7.4"
sino-program = { path = "../../sdk/program", version = "=1.9.29" }
spl-token = { path = "../../spl-token-3.2.0", version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
#solana-program-test = "1.7.4"
#solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
