[package]
name = "address-lookup-table-program"
version = "1.9.29"
description = "address lookup table program"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.7.2"
log = "0.4.14"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.127", features = ["derive"] }
frozen-abi = { path = "../../frozen-abi", version = "=1.9.29" }
frozen-abi-macro = { path = "../../frozen-abi/macro", version = "=1.9.29" }
program-runtime = { path = "../../program-runtime", version = "=1.9.29" }
sdk = { path = "../../sdk", version = "=1.9.29" }
thiserror = "1.0"

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "address_lookup_table_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
