[package]
name = "bpf-loader-program"
version = "1.9.29"
description = "BPF loader"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
log = "0.4.14"
libsecp256k1 = "0.6.0"
measure = { path = "../../measure", version = "=1.9.29" }
metrics = { path = "../../metrics", version = "=1.9.29" }
program-runtime = { path = "../../program-runtime", version = "=1.9.29" }
sdk = { path = "../../sdk", version = "=1.9.29" }
#solana_rbpf = "=0.2.24"
rbpf = { path = "../../rbpf-0.2.24", version = "=0.2.24" }
thiserror = "1.0"

[dev-dependencies]
rand = "0.7.3"
runtime = { path = "../../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "bpf_loader_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
