[package]
name = "compute-budget-program"
description = "Compute Budget program"
version = "1.9.29"
homepage = ""
documentation = ""
repository = ""
authors = [""]
license = "Apache-2.0"
edition = "2021"

[dependencies]
program-runtime = { path = "../../program-runtime", version = "=1.9.29" }
sdk = { path = "../../sdk", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "compute_budget_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
