[package]
name = "stake-program"
version = "1.9.29"
description = "Stake program"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.14"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
frozen-abi = { path = "../../frozen-abi", version = "=1.9.29" }
frozen-abi-macro = { path = "../../frozen-abi/macro", version = "=1.9.29" }
metrics = { path = "../../metrics", version = "=1.9.29" }
program-runtime = { path = "../../program-runtime", version = "=1.9.29" }
sdk = { path = "../../sdk", version = "=1.9.29" }
vote-program = { path = "../vote", version = "=1.9.29" }
config-program = { path = "../config", version = "=1.9.29" }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
logger = { path = "../../logger", version = "=1.9.29" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "stake_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
