[package]
name = "bloom"
version = "1.9.29"
description = "bloom filter"
authors = [""]
repository = ""
license = "Apache-2.0"
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
rand = "0.7.0"
serde = { version = "1.0.133", features = ["rc"] }
rayon = "1.5.1"
serde_derive = "1.0.103"
frozen-abi = { path = "../frozen-abi", version = "=1.9.29" }
frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
log = "0.4.14"

[lib]
crate-type = ["lib"]
name = "bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
