[package]
name = "clap-utils"
version = "1.9.29"
description = ""
authors = [""]
repository = ""
license = ""
homepage = ""
documentation = ""
edition = "2021"

[dependencies]
clap = "2.33.0"
rpassword = "5.0"
perf = { path = "../perf", version = "=1.9.29" }
remote-wallet = { path = "../remote-wallet", version = "=1.9.29" }
sdk = { path = "../sdk", version = "=1.9.29" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
name = "clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
